meego-keyboard (0.5.33~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#234589 - Word tracker shows up on phone number text edit
  * Fixes: NB#234432 - [TASK] Unify virtual keyboard + virtual keyboard toolbar closing behaviour

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:23:00 +0200

meego-keyboard (0.5.32-1) unstable; urgency=low

  * Fixes: NB#233350, [TASK] E-mail/url specific virtual keyboard layouts

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:23:00 +0200

meego-keyboard (0.5.31-1) unstable; urgency=low

  * Fixes: NB#231074, [FEA] Action key highlight in vkb (not for picker)
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:10:00 +0200

meego-keyboard (0.5.30-1) unstable; urgency=low

  * Fixes: NB#223273 - ± sign in virtual keyboard appends ± character for number content (Qt bug or IM bug?)
  * Fixes: NB#220954, With the vkb 'sym' view on the foreground,tapping on the 'done' button makes the layout to change before it gets closed.
  * Fixes: NB#218406, Cursor is moving to the end of the word when space bar is long pressed in a scenario.

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:54:49 +0200

meego-keyboard (0.5.29-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:50:39 +0200

meego-keyboard (0.5.28-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Thu, 24 Feb 2011 13:34:10 +0200

meego-keyboard (0.5.27-1) unstable; urgency=low

  * Fixes: NB#228917 - meego-keyboard provides dev package with missing dependencies

 -- huaming wang <huaming.wang@nokia.com>  Wed, 23 Feb 2011 16:16:40 +0200

meego-keyboard (0.5.26-1) unstable; urgency=low
